--- a/app/src/main/res/layout/activity_doctorslist.xml
+++ b/app/src/main/res/layout/activity_doctorslist.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorHint"
+    android:background="@color/colorNavigation"
     android:orientation="vertical">
 
     <LinearLayout
@@ -18,7 +18,7 @@
             android:layout_margin="5dp"
             android:gravity="center"
             android:text="Doctors List"
-            android:textColor="@color/colorNavigation"
+            android:textColor="@color/colorWhite"
             android:textSize="25sp"
             android:textStyle="bold" />
     </LinearLayout>
