App Crash Error Handled

--- a/app/src/main/res/layout/activity_adddoctors.xml
+++ b/app/src/main/res/layout/activity_adddoctors.xml
@@ -1,36 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".AddDoctors">
 
-
-    <ScrollView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
-        <LinearLayout
-            android:layout_width="match_parent"
+        <TextView
+            android:id="@+id/showMyProfile"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical">
-
-                <TextView
-                    android:id="@+id/showMyProfile"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_margin="5dp"
-                    android:fontFamily="@font/allerta"
-                    android:text="Add A Doctor"
-                    android:textColor="@color/colorNavigation"
-                    android:textSize="25sp"
+            android:layout_gravity="center"
+            android:layout_margin="5dp"
+            android:fontFamily="@font/allerta"
+            android:text="Add A Doctor"
+            android:textColor="@color/colorAcceptButton"
+            android:textSize="25sp"
                     android:textStyle="bold" />
 
                 <LinearLayout
@@ -66,7 +57,7 @@
                             android:padding="10dp"
                             android:text="Choose Image"
                             android:textAllCaps="false"
-                            android:textColor="#fff" />
+                            android:textColor="@color/colorBlack" />
 
 
                         <Button
@@ -79,48 +70,47 @@
                             android:padding="5dp"
                             android:text="Remove"
                             android:textAllCaps="false"
-                            android:textColor="@color/colorLightRed" />
+                            android:textColor="@color/colorDiscardButton" />
 
                     </LinearLayout>
 
                 </LinearLayout>
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="15dp"
-                    android:layout_marginBottom="12dp"
-                    android:orientation="horizontal"
-                    android:paddingLeft="25dp">
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:background="@drawable/shape_formtitle"
-                        android:fontFamily="@font/allerta"
-                        android:padding="8dp"
-                        android:text="Department "
-                        android:textColor="#FFF"
-                        android:textSize="16sp"
-                        android:textStyle="bold" />
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:background="@drawable/shape_formpage"
+            android:orientation="vertical"
+            android:padding="10dp">
 
-                    <Spinner
-                        android:id="@+id/departmentSpinner"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:layout_marginLeft="35dp" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:paddingVertical="8dp">
 
-                </LinearLayout>
-
-                <LinearLayout
+                <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:background="@drawable/shape_formpage"
-                    android:orientation="vertical"
-                    android:padding="10dp">
+                    android:background="@drawable/shape_formtitle"
+                    android:fontFamily="@font/allerta"
+                    android:padding="8dp"
+                    android:text="Department "
+                    android:textColor="@color/colorWhite"
+                    android:textSize="16sp"
+                    android:textStyle="bold" />
+
+                <Spinner
+                    android:id="@+id/departmentSpinner"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginStart="35dp" />
+
+            </LinearLayout>
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -134,8 +124,10 @@
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
                             android:background="@drawable/shape_formtitle"
-                            android:text="Name "
-                            android:textColor="#FFF"
+                            android:fontFamily="@font/allerta"
+                            android:padding="8dp"
+                            android:text="Name"
+                            android:textColor="@color/colorWhite"
                             android:textSize="16sp"
                             android:textStyle="bold" />
 
@@ -145,7 +137,7 @@
                             android:layout_height="match_parent"
                             android:background="@drawable/shape_textinput"
                             android:ems="12"
-                            android:paddingLeft="8dp" />
+                            android:paddingStart="8dp" />
 
                     </LinearLayout>
 
@@ -162,8 +154,10 @@
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
                             android:background="@drawable/shape_formtitle"
-                            android:text="Speciality : "
-                            android:textColor="#FFF"
+                            android:fontFamily="@font/allerta"
+                            android:padding="8dp"
+                            android:text="Speciality"
+                            android:textColor="@color/colorWhite"
                             android:textSize="16sp"
                             android:textStyle="bold" />
 
@@ -173,7 +167,7 @@
                             android:layout_height="match_parent"
                             android:background="@drawable/shape_textinput"
                             android:ems="10"
-                            android:paddingLeft="8dp" />
+                            android:paddingStart="8dp" />
 
                     </LinearLayout>
 
@@ -190,8 +184,10 @@
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
                             android:background="@drawable/shape_formtitle"
-                            android:text="Degree : "
-                            android:textColor="#FFF"
+                            android:fontFamily="@font/allerta"
+                            android:padding="8dp"
+                            android:text="Degree"
+                            android:textColor="@color/colorWhite"
                             android:textSize="16sp"
                             android:textStyle="bold" />
 
@@ -201,7 +197,7 @@
                             android:layout_height="match_parent"
                             android:background="@drawable/shape_textinput"
                             android:ems="10"
-                            android:paddingLeft="8dp" />
+                            android:paddingStart="8dp" />
 
                     </LinearLayout>
 
@@ -217,8 +213,10 @@
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
                             android:background="@drawable/shape_formtitle"
-                            android:text="ID : "
-                            android:textColor="#FFF"
+                            android:fontFamily="@font/allerta"
+                            android:padding="8dp"
+                            android:text="ID"
+                            android:textColor="@color/colorWhite"
                             android:textSize="16sp"
                             android:textStyle="bold" />
 
@@ -228,7 +226,7 @@
                             android:layout_height="match_parent"
                             android:background="@drawable/shape_textinput"
                             android:ems="10"
-                            android:paddingLeft="8dp" />
+                            android:paddingStart="8dp" />
 
                     </LinearLayout>
 
@@ -245,8 +243,10 @@
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
                             android:background="@drawable/shape_formtitle"
-                            android:text="Phone : "
-                            android:textColor="#FFF"
+                            android:fontFamily="@font/allerta"
+                            android:padding="8dp"
+                            android:text="Phone"
+                            android:textColor="@color/colorWhite"
                             android:textSize="16sp"
                             android:textStyle="bold" />
 
@@ -257,7 +257,7 @@
                             android:background="@drawable/shape_textinput"
                             android:ems="10"
                             android:inputType="phone"
-                            android:paddingLeft="8dp" />
+                            android:paddingStart="8dp" />
 
                     </LinearLayout>
 
@@ -273,8 +273,10 @@
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
                             android:background="@drawable/shape_formtitle"
-                            android:text="Email :  "
-                            android:textColor="#FFF"
+                            android:fontFamily="@font/allerta"
+                            android:padding="8dp"
+                            android:text="Email"
+                            android:textColor="@color/colorWhite"
                             android:textSize="16sp"
                             android:textStyle="bold" />
 
@@ -284,51 +286,46 @@
                             android:layout_height="match_parent"
                             android:background="@drawable/shape_textinput"
                             android:ems="10"
-                            android:paddingLeft="8dp" />
+                            android:paddingStart="8dp" />
 
                     </LinearLayout>
                 </LinearLayout>
 
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:gravity="right"
-                    android:orientation="horizontal"
-                    android:paddingRight="10dp">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:gravity="right"
+            android:orientation="horizontal"
+            android:paddingEnd="10dp">
 
-                    <Button
-                        android:id="@+id/addNewDoctor"
-                        android:layout_width="wrap_content"
-                        android:layout_height="35dp"
-                        android:layout_marginTop="10dp"
-                        android:layout_marginBottom="10dp"
-                        android:background="@color/colorButton"
-                        android:text="Add Doctor"
-                        android:textAllCaps="false" />
+            <Button
+                android:id="@+id/addNewDoctor"
+                android:layout_width="wrap_content"
+                android:layout_height="35dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
+                android:background="@color/colorAcceptButton"
+                android:text="Add Doctor"
+                android:textAllCaps="false" />
 
-                    <Button
-                        android:id="@+id/goBack"
-                        android:layout_width="wrap_content"
-                        android:layout_height="35dp"
-                        android:layout_margin="10dp"
-                        android:background="@color/colorButton"
-                        android:text="Cancel"
-                        android:textAllCaps="false" />
+            <Button
+                android:id="@+id/goBack"
+                android:layout_width="wrap_content"
+                android:layout_height="35dp"
+                android:layout_margin="10dp"
+                android:background="@color/colorDiscardButton"
+                android:text="Cancel"
+                android:textAllCaps="false" />
 
-                </LinearLayout>
-            </LinearLayout>
         </LinearLayout>
-    </ScrollView>
+    </LinearLayout>
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:background="@color/colorNavigation"
-        android:clipToPadding="false"
-        app:menu="@menu/bottom_navigation_menu"
-        tools:ignore="MissingConstraints" />
-</RelativeLayout>
+        android:background="#46dc88"
+        app:menu="@menu/bottom_navigation_menu" />
+</LinearLayout>
