--- a/app/src/main/res/layout/activity_getappointment_confirmation.xml
+++ b/app/src/main/res/layout/activity_getappointment_confirmation.xml
@@ -28,7 +28,7 @@
                     android:fontFamily="@font/allerta"
                     android:gravity="center"
                     android:text="Confirm Appointment"
-                    android:textColor="@color/colorNavigation"
+                    android:textColor="@color/colorAcceptButton"
                     android:textSize="20sp"
                     android:textStyle="bold" />
             </LinearLayout>
@@ -341,7 +341,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="35dp"
                             android:layout_marginHorizontal="20dp"
-                            android:background="@color/colorNavigation"
+                            android:background="@color/colorAcceptButton"
                             android:fontFamily="@font/allerta"
                             android:text="Confirm"
                             android:textAllCaps="false" />
@@ -350,7 +350,7 @@
                             android:id="@+id/cancelAppointment"
                             android:layout_width="wrap_content"
                             android:layout_height="35dp"
-                            android:background="@color/colorLightRed"
+                            android:background="@color/colorDiscardButton"
                             android:fontFamily="@font/allerta"
                             android:text="Cancel"
                             android:textAllCaps="false" />
