--- a/app/src/main/res/drawable/shape_button.xml
+++ b/app/src/main/res/drawable/shape_button.xml
@@ -1,16 +1,16 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="@color/colorButton"></solid>
+    <solid android:color="@color/colorTransparent" />
     <stroke
         android:width="0.3dp"
-        android:color="@color/colorBlack"></stroke>
+        android:color="@color/colorBlack" />
     <padding
         android:bottom="5dp"
         android:left="5dp"
         android:right="5dp"
-        android:top="5dp"></padding>
+        android:top="5dp" />
 
-    <corners android:radius="12dp"></corners>
+    <corners android:radius="12dp" />
 
 </shape>
