--- a/app/src/main/res/layout/activity_departments.xml
+++ b/app/src/main/res/layout/activity_departments.xml
@@ -20,7 +20,7 @@
             android:layout_margin="5dp"
             android:gravity="center"
             android:text="Departments"
-            android:textColor="@color/colorNavigation"
+            android:textColor="@color/colorAcceptButton"
             android:textSize="25sp"
             android:textStyle="bold" />
     </LinearLayout>
