--- a/app/src/main/res/layout/activity_doctorslist.xml
+++ b/app/src/main/res/layout/activity_doctorslist.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorNavigation"
+    android:background="@color/colorAcceptButton"
     android:orientation="vertical">
 
     <LinearLayout
