--- a/app/src/main/res/layout/activity_doctorslist_adapter.xml
+++ b/app/src/main/res/layout/activity_doctorslist_adapter.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/colorNavigation"
+    android:background="@color/colorAcceptButton"
     android:orientation="vertical">
 
     <androidx.cardview.widget.CardView
@@ -19,7 +19,7 @@
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:orientation="vertical"
-            android:background="@color/colorNavigation"
+            android:background="@color/colorAcceptButton"
             android:paddingBottom="2dp">
 
             <LinearLayout
