--- a/app/src/main/res/layout/activity_feedback.xml
+++ b/app/src/main/res/layout/activity_feedback.xml
@@ -26,7 +26,7 @@
                 android:gravity="center"
                 android:text="Feedback"
                 android:fontFamily="@font/allerta"
-                android:textColor="@color/colorNavigation"
+                android:textColor="@color/colorAcceptButton"
                 android:textSize="45sp"
                 android:textStyle="bold" />
         </LinearLayout>
@@ -176,7 +176,7 @@
                 android:layout_height="35dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="10dp"
-                android:background="@color/colorNavigation"
+                android:background="@color/colorAcceptButton"
                 android:text="Send"
                 android:fontFamily="@font/allerta"
                 android:textAllCaps="false" />
@@ -186,7 +186,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="35dp"
                 android:layout_margin="10dp"
-                android:background="@color/colorLightRed"
+                android:background="@color/colorDiscardButton"
                 android:text="Discard"
                 android:fontFamily="@font/allerta"
                 android:textAllCaps="false" />
