--- a/app/src/main/res/layout/simple_spinner_dropdown_item.xml
+++ b/app/src/main/res/layout/simple_spinner_dropdown_item.xml
@@ -2,12 +2,20 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorTransparent"
     android:orientation="vertical">
 
     <TextView
         android:id="@+id/simpleSpinView"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginHorizontal="5dp"
+        android:layout_marginVertical="3dp"
+        android:fontFamily="@font/allerta"
+        android:gravity="center_vertical"
+        android:padding="8dp"
+        android:text="Select"
+        android:textColor="@color/colorBlack"
         android:textSize="18sp" />
 
 </LinearLayout>
