--- a/app/src/main/res/layout/activity_doctor_appointments_adapter.xml
+++ b/app/src/main/res/layout/activity_doctor_appointments_adapter.xml
@@ -7,29 +7,26 @@
     <TableLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginStart="15dp">
+        android:layout_gravity="center">
 
         <TableRow
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginVertical="5dp"
             android:gravity="start">
 
             <TextView
                 android:id="@+id/trackSerialNo"
-                android:layout_width="30dp"
-                android:layout_marginStart="10dp"
+                android:layout_margin="5dp"
                 android:layout_weight=".25"
                 android:fontFamily="@font/allerta"
                 android:gravity="start"
-                android:paddingVertical="5dp"
+                android:padding="5dp"
                 android:text="Sr."
                 android:textSize="18sp" />
 
             <TextView
                 android:id="@+id/trackSerialName"
-                android:layout_width="100dp"
+                android:layout_margin="5dp"
                 android:layout_weight=".75"
                 android:fontFamily="@font/allerta"
                 android:gravity="start"
@@ -39,20 +36,20 @@
 
             <TextView
                 android:id="@+id/trackSerialTime"
-                android:layout_width="40dp"
+                android:layout_margin="5dp"
                 android:layout_weight=".5"
                 android:fontFamily="@font/allerta"
-                android:gravity="center"
+                android:gravity="start"
                 android:padding="5dp"
                 android:text="Time"
                 android:textSize="18sp" />
 
             <TextView
                 android:id="@+id/trackSerialDoctor"
-                android:layout_width="80dp"
+                android:layout_margin="5dp"
                 android:layout_weight=".5"
                 android:fontFamily="@font/allerta"
-                android:gravity="center"
+                android:gravity="start"
                 android:padding="5dp"
                 android:text="Doctor"
                 android:textSize="18sp" />
